[package]
name = "URLShorteningService"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.4"
r2d2 = "0.8"
redis = { version = "0.29.2", features = ["r2d2", "aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = {version = "0.4", features = ["serde"]}
uuid = { version = "1.0", features = ["v4"] }
redis_r2d2 = "0.17.0"
serde_json = "1.0.140"
base64 = "0.22.1"

